Fix gap in the footer

--- a/app/assets/stylesheets/custom/_footer.scss
+++ b/app/assets/stylesheets/custom/_footer.scss
@@ -35,6 +35,10 @@
   width: 200px;
 }
 
+.c-footer__form-hidden {
+  @include element-invisible;
+}
+
 .c-footer__form-col-button {
   display: flex;
   align-self: stretch;
